--- a/TailwindCSS/src/output.css
+++ b/TailwindCSS/src/output.css
@@ -588,10 +588,6 @@ video {
   }
 }
 
-.static {
-  position: static;
-}
-
 .fixed {
   position: fixed;
 }
@@ -608,136 +604,40 @@ video {
   position: sticky;
 }
 
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-3 {
-  top: 0.75rem;
-}
-
-.top-1 {
-  top: 0.25rem;
-}
-
-.top-12 {
-  top: 3rem;
-}
-
-.top-11 {
-  top: 2.75rem;
-}
-
-.top-24 {
-  top: 6rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
-.top-8 {
-  top: 2rem;
-}
-
-.top-6 {
-  top: 1.5rem;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.bottom-5 {
-  bottom: 1.25rem;
-}
-
-.-bottom-5 {
-  bottom: -1.25rem;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-full {
-  top: 100%;
-}
-
-.right-full {
-  right: 100%;
-}
-
-.right-2 {
-  right: 0.5rem;
-}
-
-.right-1 {
-  right: 0.25rem;
+.left-\[1100px\] {
+  left: 1100px;
 }
 
 .right-3 {
   right: 0.75rem;
 }
 
-.left-\[500px\] {
-  left: 500px;
+.top-3 {
+  top: 0.75rem;
 }
 
-.left-\[400px\] {
-  left: 400px;
+.top-6 {
+  top: 1.5rem;
 }
 
-.right-5 {
-  right: 1.25rem;
+.top-full {
+  top: 100%;
 }
 
-.left-\[800px\] {
-  left: 800px;
+.left-2 {
+  left: 0.5rem;
 }
 
-.right-\[100px\] {
-  right: 100px;
-}
-
-.left-\[950px\] {
-  left: 950px;
-}
-
-.left-\[1000px\] {
-  left: 1000px;
-}
-
-.left-\[1050px\] {
-  left: 1050px;
-}
-
-.left-\[1100px\] {
-  left: 1100px;
-}
-
-.left-1 {
-  left: 0.25rem;
-}
-
-.z-50 {
-  z-index: 50;
+.top-2 {
+  top: 0.5rem;
 }
 
 .z-10 {
   z-index: 10;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .col-start-1 {
@@ -784,6 +684,10 @@ video {
   margin-bottom: 1rem;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
 .mr-3 {
   margin-right: 0.75rem;
 }
@@ -802,14 +706,6 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
-.mt-7 {
-  margin-top: 1.75rem;
 }
 
 .mt-6 {
@@ -856,8 +752,16 @@ video {
   height: 1500px;
 }
 
+.h-\[250px\] {
+  height: 250px;
+}
+
 .h-\[400px\] {
   height: 400px;
+}
+
+.h-\[450px\] {
+  height: 450px;
 }
 
 .h-\[600px\] {
@@ -878,57 +782,12 @@ video {
   height: 100vh;
 }
 
-.h-7 {
-  height: 1.75rem;
+.h-5 {
+  height: 1.25rem;
 }
 
-.h-\[\] {
-  height: ;
-}
-
-.h-\[40\] {
-  height: 40;
-}
-
-.h-\[40px\] {
-  height: 40px;
-}
-
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.h-dvh {
-  height: 100dvh;
-}
-
-.h-\[px\] {
-  height: px;
-}
-
-.h-\[700px\] {
-  height: 700px;
-}
-
-.h-1\/5 {
-  height: 20%;
-}
-
-.h-1\/3 {
-  height: 33.333333%;
-}
-
-.h-\[300px\] {
-  height: 300px;
-}
-
-.h-\[250px\] {
-  height: 250px;
-}
-
-.h-\[450px\] {
-  height: 450px;
+.h-52 {
+  height: 13rem;
 }
 
 .min-h-32 {
@@ -959,6 +818,10 @@ video {
   width: 20rem;
 }
 
+.w-9 {
+  width: 2.25rem;
+}
+
 .w-96 {
   width: 24rem;
 }
@@ -967,12 +830,20 @@ video {
   width: 140px;
 }
 
-.w-\[2000px\] {
-  width: 2000px;
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[225px\] {
+  width: 225px;
 }
 
 .w-\[250px\] {
   width: 250px;
+}
+
+.w-\[full\] {
+  width: full;
 }
 
 .w-dvw {
@@ -1002,56 +873,8 @@ video {
   width: 100vw;
 }
 
-.w-\[\] {
-  width: ;
-}
-
-.w-\[700px\] {
-  width: 700px;
-}
-
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[4px\] {
-  width: 4px;
-}
-
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-\[full\] {
-  width: full;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-1\/5 {
-  width: 20%;
-}
-
-.w-1\/6 {
-  width: 16.666667%;
-}
-
-.w-\[60px\] {
-  width: 60px;
-}
-
-.w-\[125px\] {
-  width: 125px;
-}
-
-.w-\[225px\] {
-  width: 225px;
+.w-52 {
+  width: 13rem;
 }
 
 .min-w-24 {
@@ -1064,26 +887,6 @@ video {
 
 .grid-cols-\[260px\2c 260px\2c 260px\2c 260px\] {
   grid-template-columns: 260px 260px 260px 260px;
-}
-
-.grid-rows-\[\] {
-  grid-template-rows: ;
-}
-
-.grid-rows-\[7oopx\] {
-  grid-template-rows: 7oopx;
-}
-
-.grid-rows-\[700px\] {
-  grid-template-rows: 700px;
-}
-
-.grid-rows-\[500px\] {
-  grid-template-rows: 500px;
-}
-
-.grid-rows-\[600px\] {
-  grid-template-rows: 600px;
 }
 
 .grid-rows-\[650px\] {
@@ -1102,10 +905,6 @@ video {
   gap: 0.5rem;
 }
 
-.overflow-hidden {
-  overflow: hidden;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -1116,10 +915,6 @@ video {
 
 .border-2 {
   border-width: 2px;
-}
-
-.border {
-  border-width: 1px;
 }
 
 .border-emerald-600 {
@@ -1152,6 +947,15 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
+.border-gray-800 {
+  --tw-border-opacity: 1;
+  border-color: rgb(31 41 55 / var(--tw-border-opacity, 1));
+}
+
+.bg-amber-500\/40 {
+  background-color: rgb(245 158 11 / 0.4);
+}
+
 .bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
@@ -1180,6 +984,11 @@ video {
 .bg-gray-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
+}
+
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity, 1));
 }
 
 .bg-rose-600 {
@@ -1212,50 +1021,28 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-green-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity, 1));
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.bg-amber-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 158 11 / var(--tw-bg-opacity, 1));
+.from-purple-500 {
+  --tw-gradient-from: #a855f7 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(168 85 247 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.bg-amber-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 230 138 / var(--tw-bg-opacity, 1));
+.from-purple-800 {
+  --tw-gradient-from: #6b21a8 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(107 33 168 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.bg-amber-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(217 119 6 / var(--tw-bg-opacity, 1));
+.to-fuchsia-700 {
+  --tw-gradient-to: #a21caf var(--tw-gradient-to-position);
 }
 
-.bg-amber-500\/50 {
-  background-color: rgb(245 158 11 / 0.5);
-}
-
-.bg-amber-500\/70 {
-  background-color: rgb(245 158 11 / 0.7);
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
-}
-
-.bg-purple-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 51 234 / var(--tw-bg-opacity, 1));
-}
-
-.bg-amber-500\/90 {
-  background-color: rgb(245 158 11 / 0.9);
-}
-
-.bg-amber-500\/40 {
-  background-color: rgb(245 158 11 / 0.4);
+.to-fuchsia-800 {
+  --tw-gradient-to: #86198f var(--tw-gradient-to-position);
 }
 
 .p-1 {
@@ -1264,6 +1051,10 @@ video {
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .p-5 {
@@ -1276,14 +1067,6 @@ video {
 
 .p-\[24px\] {
   padding: 24px;
-}
-
-.p-4 {
-  padding: 1rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
 }
 
 .px-1 {
@@ -1301,20 +1084,12 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.pr-3 {
-  padding-right: 0.75rem;
+.pl-3 {
+  padding-left: 0.75rem;
 }
 
 .pr-1 {
   padding-right: 0.25rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
-.pl-3 {
-  padding-left: 0.75rem;
 }
 
 .text-center {
@@ -1330,13 +1105,13 @@ video {
   line-height: 2.25rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
+.text-lg {
+  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
+.text-xl {
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -1368,42 +1143,8 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-slate-950 {
-  --tw-text-opacity: 1;
-  color: rgb(2 6 23 / var(--tw-text-opacity, 1));
-}
-
-.text-pink-800 {
-  --tw-text-opacity: 1;
-  color: rgb(157 23 77 / var(--tw-text-opacity, 1));
-}
-
-.decoration-green-500 {
-  text-decoration-color: #22c55e;
-}
-
-.decoration-dashed {
-  text-decoration-style: dashed;
-}
-
-.opacity-10 {
-  opacity: 0.1;
-}
-
-.opacity-5 {
-  opacity: 0.05;
-}
-
-.opacity-80 {
-  opacity: 0.8;
-}
-
 .opacity-95 {
   opacity: 0.95;
-}
-
-.opacity-40 {
-  opacity: 0.4;
 }
 
 .shadow-\[10px_10px_20px_5px_rgba\(203\2c 213\2c 225\2c 0\.5\)\] {
@@ -1444,16 +1185,21 @@ video {
   --tw-ring-color: rgb(37 99 235 / var(--tw-ring-opacity, 1));
 }
 
+.blur-md {
+  --tw-blur: blur(12px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .hover\:-bottom-2:hover {
   bottom: -0.5rem;
 }
 
 .hover\:bottom-0:hover {
   bottom: 0px;
-}
-
-.hover\:left-0:hover {
-  left: 0px;
 }
 
 .hover\:right-0:hover {
